--- a/FECafe/FECafe.csproj
+++ b/FECafe/FECafe.csproj
@@ -10,15 +10,20 @@
 
   <ItemGroup>
     <None Remove="Images\ICON4801.png" />
+    <None Remove="Images\Langcafe.PNG" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.11.0" />
     <PackageReference Include="MaterialDesignThemes" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Images\ICON4801.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Langcafe.PNG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
